--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,19 +12,29 @@ on:
 jobs:
   build:
     permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
+      pages: write
+      id-token: write
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Instalar node
+    - name: Check out the code
+      uses: actions/checkout@v4
+      
+    - name: Set up Node.js
       uses: actions/setup-node@v3
-    - run: npm ci
-    - run: npm run build --if-present
-    - name: Subir artefacto
+      with:
+        node-version: '16.x'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Build the app
+      run: npm run build --if-present
+
+    - name: Upload artifact
       uses: actions/upload-pages-artifact@v3.0.1
       with:
         path: ./dist
-    - name: Despliegue de la app
+
+    - name: Deploy to GitHub Pages
       uses: actions/deploy-pages@v4.0.5
