--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.0.2",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
@@ -25,11 +26,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^5.0.0",
+    "@vue/compiler-sfc": "^3.2.13",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "vue-cli-plugin-vuetify": "~2.5.8",
-    "webpack-plugin-vuetify": "^2.0.0-alpha.0",
-    "@vue/compiler-sfc": "^3.2.13"
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
   "eslintConfig": {
     "root": true,
